--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,13 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@tailwind base; /* reset HTML default styles */
+@tailwind components;  /* default tailwind blocks */
+@tailwind utilities;  /* all variants */
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+p {
+  @apply text-lg font-medium
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@layer components{
+  h1{
+    @apply bg-gray-500
   }
 }
